sintatico.output
Grammar

    0 $accept: programa $end

    1 programa: lista_decl

    2 lista_decl: declaracao
    3           | declaracao lista_decl

    4 declaracao: decl_var
    5           | decl_func

    6 decl_var: tipo_especif var FIM_EXPRESS

    7 decl_func: tipo_especif nome_func INI_PARAM params FIM_PARAM instruc_composta

    8 tipo_especif: INT
    9             | FLOAT
   10             | POINT
   11             | SHAPE

   12 params: %empty
   13       | lista_param

   14 lista_param: param
   15            | param SEPARA_ARG lista_param

   16 param: tipo_especif endereco
   17      | tipo_especif var

   18 instruc_composta: INI_INSTRUC decl_local lista_instruc FIM_INSTRUC

   19 decl_local: %empty
   20           | decl_var decl_local

   21 lista_instruc: %empty
   22              | instrucao lista_instruc

   23 instrucao: instruc_expr
   24          | instruc_composta
   25          | instruc_cond
   26          | instruc_iterac
   27          | instruc_return

   28 instruc_expr: expressao FIM_EXPRESS
   29             | FIM_EXPRESS

   30 instruc_cond: IF INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC
   31             | IF INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC ELSE INI_INSTRUC instrucao FIM_INSTRUC

   32 instruc_iterac: FOR INI_PARAM expressao FIM_EXPRESS express_simp FIM_EXPRESS expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC

   33 instruc_return: RETURN expressao FIM_EXPRESS

   34 expressao: var atrop express_simp
   35          | express_simp

   36 var: ID

   37 express_simp: express_soma
   38             | express_soma relop express_soma

   39 express_soma: termo
   40             | termo addop express_soma

   41 termo: factor
   42      | factor mulop termo

   43 factor: INI_PARAM expressao FIM_PARAM
   44       | endereco
   45       | var
   46       | chamada
   47       | num
   48       | LITERAL

   49 endereco: ACESSO_END var

   50 chamada: nome_func INI_PARAM arg FIM_PARAM

   51 nome_func: PRINTINT
   52          | PRINTFLOAT
   53          | PRINTPOINT
   54          | PRINTSHAPE
   55          | SCANINT
   56          | SCANFLOAT
   57          | CONSTROIPOINT
   58          | CONSTROISHAPE
   59          | PERIMETRO
   60          | ISIN
   61          | ISCOLLIDED
   62          | var

   63 arg: %empty
   64    | lista_arg

   65 lista_arg: expressao
   66          | expressao SEPARA_ARG lista_arg

   67 atrop: ATR
   68      | PLUS_ATR
   69      | MINUS_ATR
   70      | TIMES_ATR
   71      | OVER_ATR

   72 relop: LT
   73      | GT
   74      | LE
   75      | GE
   76      | EQ
   77      | NE
   78      | logop

   79 logop: NOT
   80      | AND
   81      | OR

   82 addop: PLUS_OP
   83      | MINUS_OP

   84 mulop: TIMES_OP
   85      | OVER_OP

   86 num: INTEIRO
   87    | DECIMAL


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 30 31
ELSE (259) 31
FOR (260) 32
RETURN (261) 33
INT (262) 8
FLOAT (263) 9
POINT (264) 10
SHAPE (265) 11
PRINTINT (266) 51
PRINTFLOAT (267) 52
PRINTPOINT (268) 53
PRINTSHAPE (269) 54
SCANINT (270) 55
SCANFLOAT (271) 56
CONSTROIPOINT (272) 57
CONSTROISHAPE (273) 58
PERIMETRO (274) 59
ISIN (275) 60
ISCOLLIDED (276) 61
LITERAL (277) 48
INTEIRO (278) 86
DECIMAL (279) 87
ID (280) 36
LT (281) 72
GT (282) 73
LE (283) 74
GE (284) 75
EQ (285) 76
NE (286) 77
NOT (287) 79
AND (288) 80
OR (289) 81
ATR (290) 67
PLUS_ATR (291) 68
MINUS_ATR (292) 69
TIMES_ATR (293) 70
OVER_ATR (294) 71
PLUS_OP (295) 82
MINUS_OP (296) 83
TIMES_OP (297) 84
OVER_OP (298) 85
INI_PARAM (299) 7 30 31 32 43 50
FIM_PARAM (300) 7 30 31 32 43 50
INI_INSTRUC (301) 18 30 31 32
FIM_INSTRUC (302) 18 30 31 32
FIM_EXPRESS (303) 6 28 29 32 33
SEPARA_ARG (304) 15 66
ACESSO_END (305) 49


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
programa (52)
    on left: 1, on right: 0
lista_decl (53)
    on left: 2 3, on right: 1 3
declaracao (54)
    on left: 4 5, on right: 2 3
decl_var (55)
    on left: 6, on right: 4 20
decl_func (56)
    on left: 7, on right: 5
tipo_especif (57)
    on left: 8 9 10 11, on right: 6 7 16 17
params (58)
    on left: 12 13, on right: 7
lista_param (59)
    on left: 14 15, on right: 13 15
param (60)
    on left: 16 17, on right: 14 15
instruc_composta (61)
    on left: 18, on right: 7 24
decl_local (62)
    on left: 19 20, on right: 18 20
lista_instruc (63)
    on left: 21 22, on right: 18 22
instrucao (64)
    on left: 23 24 25 26 27, on right: 22 30 31 32
instruc_expr (65)
    on left: 28 29, on right: 23
instruc_cond (66)
    on left: 30 31, on right: 25
instruc_iterac (67)
    on left: 32, on right: 26
instruc_return (68)
    on left: 33, on right: 27
expressao (69)
    on left: 34 35, on right: 28 30 31 32 33 43 65 66
var (70)
    on left: 36, on right: 6 17 34 45 49 62
express_simp (71)
    on left: 37 38, on right: 32 34 35
express_soma (72)
    on left: 39 40, on right: 37 38 40
termo (73)
    on left: 41 42, on right: 39 40 42
factor (74)
    on left: 43 44 45 46 47 48, on right: 41 42
endereco (75)
    on left: 49, on right: 16 44
chamada (76)
    on left: 50, on right: 46
nome_func (77)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62, on right: 7 50
arg (78)
    on left: 63 64, on right: 50
lista_arg (79)
    on left: 65 66, on right: 64 66
atrop (80)
    on left: 67 68 69 70 71, on right: 34
relop (81)
    on left: 72 73 74 75 76 77 78, on right: 38
logop (82)
    on left: 79 80 81, on right: 78
addop (83)
    on left: 82 83, on right: 40
mulop (84)
    on left: 84 85, on right: 42
num (85)
    on left: 86 87, on right: 47


State 0

    0 $accept: . programa $end
    1 programa: . lista_decl
    2 lista_decl: . declaracao
    3           | . declaracao lista_decl
    4 declaracao: . decl_var
    5           | . decl_func
    6 decl_var: . tipo_especif var FIM_EXPRESS
    7 decl_func: . tipo_especif nome_func INI_PARAM params FIM_PARAM instruc_composta
    8 tipo_especif: . INT
    9             | . FLOAT
   10             | . POINT
   11             | . SHAPE

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    POINT  shift, and go to state 3
    SHAPE  shift, and go to state 4

    programa      go to state 5
    lista_decl    go to state 6
    declaracao    go to state 7
    decl_var      go to state 8
    decl_func     go to state 9
    tipo_especif  go to state 10


State 1

    8 tipo_especif: INT .

    $default  reduce using rule 8 (tipo_especif)


State 2

    9 tipo_especif: FLOAT .

    $default  reduce using rule 9 (tipo_especif)


State 3

   10 tipo_especif: POINT .

    $default  reduce using rule 10 (tipo_especif)


State 4

   11 tipo_especif: SHAPE .

    $default  reduce using rule 11 (tipo_especif)


State 5

    0 $accept: programa . $end

    $end  shift, and go to state 11


State 6

    1 programa: lista_decl .

    $default  reduce using rule 1 (programa)


State 7

    2 lista_decl: . declaracao
    2           | declaracao .  [$end]
    3           | . declaracao lista_decl
    3           | declaracao . lista_decl
    4 declaracao: . decl_var
    5           | . decl_func
    6 decl_var: . tipo_especif var FIM_EXPRESS
    7 decl_func: . tipo_especif nome_func INI_PARAM params FIM_PARAM instruc_composta
    8 tipo_especif: . INT
    9             | . FLOAT
   10             | . POINT
   11             | . SHAPE

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    POINT  shift, and go to state 3
    SHAPE  shift, and go to state 4

    $default  reduce using rule 2 (lista_decl)

    lista_decl    go to state 12
    declaracao    go to state 7
    decl_var      go to state 8
    decl_func     go to state 9
    tipo_especif  go to state 10


State 8

    4 declaracao: decl_var .

    $default  reduce using rule 4 (declaracao)


State 9

    5 declaracao: decl_func .

    $default  reduce using rule 5 (declaracao)


State 10

    6 decl_var: tipo_especif . var FIM_EXPRESS
    7 decl_func: tipo_especif . nome_func INI_PARAM params FIM_PARAM instruc_composta
   36 var: . ID
   51 nome_func: . PRINTINT
   52          | . PRINTFLOAT
   53          | . PRINTPOINT
   54          | . PRINTSHAPE
   55          | . SCANINT
   56          | . SCANFLOAT
   57          | . CONSTROIPOINT
   58          | . CONSTROISHAPE
   59          | . PERIMETRO
   60          | . ISIN
   61          | . ISCOLLIDED
   62          | . var

    PRINTINT       shift, and go to state 13
    PRINTFLOAT     shift, and go to state 14
    PRINTPOINT     shift, and go to state 15
    PRINTSHAPE     shift, and go to state 16
    SCANINT        shift, and go to state 17
    SCANFLOAT      shift, and go to state 18
    CONSTROIPOINT  shift, and go to state 19
    CONSTROISHAPE  shift, and go to state 20
    PERIMETRO      shift, and go to state 21
    ISIN           shift, and go to state 22
    ISCOLLIDED     shift, and go to state 23
    ID             shift, and go to state 24

    var        go to state 25
    nome_func  go to state 26


State 11

    0 $accept: programa $end .

    $default  accept


State 12

    3 lista_decl: declaracao lista_decl .

    $default  reduce using rule 3 (lista_decl)


State 13

   51 nome_func: PRINTINT .

    $default  reduce using rule 51 (nome_func)


State 14

   52 nome_func: PRINTFLOAT .

    $default  reduce using rule 52 (nome_func)


State 15

   53 nome_func: PRINTPOINT .

    $default  reduce using rule 53 (nome_func)


State 16

   54 nome_func: PRINTSHAPE .

    $default  reduce using rule 54 (nome_func)


State 17

   55 nome_func: SCANINT .

    $default  reduce using rule 55 (nome_func)


State 18

   56 nome_func: SCANFLOAT .

    $default  reduce using rule 56 (nome_func)


State 19

   57 nome_func: CONSTROIPOINT .

    $default  reduce using rule 57 (nome_func)


State 20

   58 nome_func: CONSTROISHAPE .

    $default  reduce using rule 58 (nome_func)


State 21

   59 nome_func: PERIMETRO .

    $default  reduce using rule 59 (nome_func)


State 22

   60 nome_func: ISIN .

    $default  reduce using rule 60 (nome_func)


State 23

   61 nome_func: ISCOLLIDED .

    $default  reduce using rule 61 (nome_func)


State 24

   36 var: ID .

    $default  reduce using rule 36 (var)


State 25

    6 decl_var: tipo_especif var . FIM_EXPRESS
   62 nome_func: var .  [INI_PARAM]

    FIM_EXPRESS  shift, and go to state 27

    $default  reduce using rule 62 (nome_func)


State 26

    7 decl_func: tipo_especif nome_func . INI_PARAM params FIM_PARAM instruc_composta

    INI_PARAM  shift, and go to state 28


State 27

    6 decl_var: tipo_especif var FIM_EXPRESS .

    $default  reduce using rule 6 (decl_var)


State 28

    7 decl_func: tipo_especif nome_func INI_PARAM . params FIM_PARAM instruc_composta
    8 tipo_especif: . INT
    9             | . FLOAT
   10             | . POINT
   11             | . SHAPE
   12 params: . %empty  [FIM_PARAM]
   13       | . lista_param
   14 lista_param: . param
   15            | . param SEPARA_ARG lista_param
   16 param: . tipo_especif endereco
   17      | . tipo_especif var

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    POINT  shift, and go to state 3
    SHAPE  shift, and go to state 4

    $default  reduce using rule 12 (params)

    tipo_especif  go to state 29
    params        go to state 30
    lista_param   go to state 31
    param         go to state 32


State 29

   16 param: tipo_especif . endereco
   17      | tipo_especif . var
   36 var: . ID
   49 endereco: . ACESSO_END var

    ID          shift, and go to state 24
    ACESSO_END  shift, and go to state 33

    var       go to state 34
    endereco  go to state 35


State 30

    7 decl_func: tipo_especif nome_func INI_PARAM params . FIM_PARAM instruc_composta

    FIM_PARAM  shift, and go to state 36


State 31

   13 params: lista_param .

    $default  reduce using rule 13 (params)


State 32

   14 lista_param: param .  [FIM_PARAM]
   15            | param . SEPARA_ARG lista_param

    SEPARA_ARG  shift, and go to state 37

    $default  reduce using rule 14 (lista_param)


State 33

   36 var: . ID
   49 endereco: ACESSO_END . var

    ID  shift, and go to state 24

    var  go to state 38


State 34

   17 param: tipo_especif var .

    $default  reduce using rule 17 (param)


State 35

   16 param: tipo_especif endereco .

    $default  reduce using rule 16 (param)


State 36

    7 decl_func: tipo_especif nome_func INI_PARAM params FIM_PARAM . instruc_composta
   18 instruc_composta: . INI_INSTRUC decl_local lista_instruc FIM_INSTRUC

    INI_INSTRUC  shift, and go to state 39

    instruc_composta  go to state 40


State 37

    8 tipo_especif: . INT
    9             | . FLOAT
   10             | . POINT
   11             | . SHAPE
   14 lista_param: . param
   15            | . param SEPARA_ARG lista_param
   15            | param SEPARA_ARG . lista_param
   16 param: . tipo_especif endereco
   17      | . tipo_especif var

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    POINT  shift, and go to state 3
    SHAPE  shift, and go to state 4

    tipo_especif  go to state 29
    lista_param   go to state 41
    param         go to state 32


State 38

   49 endereco: ACESSO_END var .

    $default  reduce using rule 49 (endereco)


State 39

    6 decl_var: . tipo_especif var FIM_EXPRESS
    8 tipo_especif: . INT
    9             | . FLOAT
   10             | . POINT
   11             | . SHAPE
   18 instruc_composta: INI_INSTRUC . decl_local lista_instruc FIM_INSTRUC
   19 decl_local: . %empty  [IF, FOR, RETURN, PRINTINT, PRINTFLOAT, PRINTPOINT, PRINTSHAPE, SCANINT, SCANFLOAT, CONSTROIPOINT, CONSTROISHAPE, PERIMETRO, ISIN, ISCOLLIDED, LITERAL, INTEIRO, DECIMAL, ID, INI_PARAM, INI_INSTRUC, FIM_INSTRUC, FIM_EXPRESS, ACESSO_END]
   20           | . decl_var decl_local

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    POINT  shift, and go to state 3
    SHAPE  shift, and go to state 4

    $default  reduce using rule 19 (decl_local)

    decl_var      go to state 42
    tipo_especif  go to state 43
    decl_local    go to state 44


State 40

    7 decl_func: tipo_especif nome_func INI_PARAM params FIM_PARAM instruc_composta .

    $default  reduce using rule 7 (decl_func)


State 41

   15 lista_param: param SEPARA_ARG lista_param .

    $default  reduce using rule 15 (lista_param)


State 42

    6 decl_var: . tipo_especif var FIM_EXPRESS
    8 tipo_especif: . INT
    9             | . FLOAT
   10             | . POINT
   11             | . SHAPE
   19 decl_local: . %empty  [IF, FOR, RETURN, PRINTINT, PRINTFLOAT, PRINTPOINT, PRINTSHAPE, SCANINT, SCANFLOAT, CONSTROIPOINT, CONSTROISHAPE, PERIMETRO, ISIN, ISCOLLIDED, LITERAL, INTEIRO, DECIMAL, ID, INI_PARAM, INI_INSTRUC, FIM_INSTRUC, FIM_EXPRESS, ACESSO_END]
   20           | . decl_var decl_local
   20           | decl_var . decl_local

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    POINT  shift, and go to state 3
    SHAPE  shift, and go to state 4

    $default  reduce using rule 19 (decl_local)

    decl_var      go to state 42
    tipo_especif  go to state 43
    decl_local    go to state 45


State 43

    6 decl_var: tipo_especif . var FIM_EXPRESS
   36 var: . ID

    ID  shift, and go to state 24

    var  go to state 46


State 44

   18 instruc_composta: . INI_INSTRUC decl_local lista_instruc FIM_INSTRUC
   18                 | INI_INSTRUC decl_local . lista_instruc FIM_INSTRUC
   21 lista_instruc: . %empty  [FIM_INSTRUC]
   22              | . instrucao lista_instruc
   23 instrucao: . instruc_expr
   24          | . instruc_composta
   25          | . instruc_cond
   26          | . instruc_iterac
   27          | . instruc_return
   28 instruc_expr: . expressao FIM_EXPRESS
   29             | . FIM_EXPRESS
   30 instruc_cond: . IF INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC
   31             | . IF INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC ELSE INI_INSTRUC instrucao FIM_INSTRUC
   32 instruc_iterac: . FOR INI_PARAM expressao FIM_EXPRESS express_simp FIM_EXPRESS expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC
   33 instruc_return: . RETURN expressao FIM_EXPRESS
   34 expressao: . var atrop express_simp
   35          | . express_simp
   36 var: . ID
   37 express_simp: . express_soma
   38             | . express_soma relop express_soma
   39 express_soma: . termo
   40             | . termo addop express_soma
   41 termo: . factor
   42      | . factor mulop termo
   43 factor: . INI_PARAM expressao FIM_PARAM
   44       | . endereco
   45       | . var
   46       | . chamada
   47       | . num
   48       | . LITERAL
   49 endereco: . ACESSO_END var
   50 chamada: . nome_func INI_PARAM arg FIM_PARAM
   51 nome_func: . PRINTINT
   52          | . PRINTFLOAT
   53          | . PRINTPOINT
   54          | . PRINTSHAPE
   55          | . SCANINT
   56          | . SCANFLOAT
   57          | . CONSTROIPOINT
   58          | . CONSTROISHAPE
   59          | . PERIMETRO
   60          | . ISIN
   61          | . ISCOLLIDED
   62          | . var
   86 num: . INTEIRO
   87    | . DECIMAL

    IF             shift, and go to state 47
    FOR            shift, and go to state 48
    RETURN         shift, and go to state 49
    PRINTINT       shift, and go to state 13
    PRINTFLOAT     shift, and go to state 14
    PRINTPOINT     shift, and go to state 15
    PRINTSHAPE     shift, and go to state 16
    SCANINT        shift, and go to state 17
    SCANFLOAT      shift, and go to state 18
    CONSTROIPOINT  shift, and go to state 19
    CONSTROISHAPE  shift, and go to state 20
    PERIMETRO      shift, and go to state 21
    ISIN           shift, and go to state 22
    ISCOLLIDED     shift, and go to state 23
    LITERAL        shift, and go to state 50
    INTEIRO        shift, and go to state 51
    DECIMAL        shift, and go to state 52
    ID             shift, and go to state 24
    INI_PARAM      shift, and go to state 53
    INI_INSTRUC    shift, and go to state 39
    FIM_EXPRESS    shift, and go to state 54
    ACESSO_END     shift, and go to state 33

    $default  reduce using rule 21 (lista_instruc)

    instruc_composta  go to state 55
    lista_instruc     go to state 56
    instrucao         go to state 57
    instruc_expr      go to state 58
    instruc_cond      go to state 59
    instruc_iterac    go to state 60
    instruc_return    go to state 61
    expressao         go to state 62
    var               go to state 63
    express_simp      go to state 64
    express_soma      go to state 65
    termo             go to state 66
    factor            go to state 67
    endereco          go to state 68
    chamada           go to state 69
    nome_func         go to state 70
    num               go to state 71


State 45

   20 decl_local: decl_var decl_local .

    $default  reduce using rule 20 (decl_local)


State 46

    6 decl_var: tipo_especif var . FIM_EXPRESS

    FIM_EXPRESS  shift, and go to state 27


State 47

   30 instruc_cond: IF . INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC
   31             | IF . INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC ELSE INI_INSTRUC instrucao FIM_INSTRUC

    INI_PARAM  shift, and go to state 72


State 48

   32 instruc_iterac: FOR . INI_PARAM expressao FIM_EXPRESS express_simp FIM_EXPRESS expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC

    INI_PARAM  shift, and go to state 73


State 49

   33 instruc_return: RETURN . expressao FIM_EXPRESS
   34 expressao: . var atrop express_simp
   35          | . express_simp
   36 var: . ID
   37 express_simp: . express_soma
   38             | . express_soma relop express_soma
   39 express_soma: . termo
   40             | . termo addop express_soma
   41 termo: . factor
   42      | . factor mulop termo
   43 factor: . INI_PARAM expressao FIM_PARAM
   44       | . endereco
   45       | . var
   46       | . chamada
   47       | . num
   48       | . LITERAL
   49 endereco: . ACESSO_END var
   50 chamada: . nome_func INI_PARAM arg FIM_PARAM
   51 nome_func: . PRINTINT
   52          | . PRINTFLOAT
   53          | . PRINTPOINT
   54          | . PRINTSHAPE
   55          | . SCANINT
   56          | . SCANFLOAT
   57          | . CONSTROIPOINT
   58          | . CONSTROISHAPE
   59          | . PERIMETRO
   60          | . ISIN
   61          | . ISCOLLIDED
   62          | . var
   86 num: . INTEIRO
   87    | . DECIMAL

    PRINTINT       shift, and go to state 13
    PRINTFLOAT     shift, and go to state 14
    PRINTPOINT     shift, and go to state 15
    PRINTSHAPE     shift, and go to state 16
    SCANINT        shift, and go to state 17
    SCANFLOAT      shift, and go to state 18
    CONSTROIPOINT  shift, and go to state 19
    CONSTROISHAPE  shift, and go to state 20
    PERIMETRO      shift, and go to state 21
    ISIN           shift, and go to state 22
    ISCOLLIDED     shift, and go to state 23
    LITERAL        shift, and go to state 50
    INTEIRO        shift, and go to state 51
    DECIMAL        shift, and go to state 52
    ID             shift, and go to state 24
    INI_PARAM      shift, and go to state 53
    ACESSO_END     shift, and go to state 33

    expressao     go to state 74
    var           go to state 63
    express_simp  go to state 64
    express_soma  go to state 65
    termo         go to state 66
    factor        go to state 67
    endereco      go to state 68
    chamada       go to state 69
    nome_func     go to state 70
    num           go to state 71


State 50

   48 factor: LITERAL .

    $default  reduce using rule 48 (factor)


State 51

   86 num: INTEIRO .

    $default  reduce using rule 86 (num)


State 52

   87 num: DECIMAL .

    $default  reduce using rule 87 (num)


State 53

   34 expressao: . var atrop express_simp
   35          | . express_simp
   36 var: . ID
   37 express_simp: . express_soma
   38             | . express_soma relop express_soma
   39 express_soma: . termo
   40             | . termo addop express_soma
   41 termo: . factor
   42      | . factor mulop termo
   43 factor: . INI_PARAM expressao FIM_PARAM
   43       | INI_PARAM . expressao FIM_PARAM
   44       | . endereco
   45       | . var
   46       | . chamada
   47       | . num
   48       | . LITERAL
   49 endereco: . ACESSO_END var
   50 chamada: . nome_func INI_PARAM arg FIM_PARAM
   51 nome_func: . PRINTINT
   52          | . PRINTFLOAT
   53          | . PRINTPOINT
   54          | . PRINTSHAPE
   55          | . SCANINT
   56          | . SCANFLOAT
   57          | . CONSTROIPOINT
   58          | . CONSTROISHAPE
   59          | . PERIMETRO
   60          | . ISIN
   61          | . ISCOLLIDED
   62          | . var
   86 num: . INTEIRO
   87    | . DECIMAL

    PRINTINT       shift, and go to state 13
    PRINTFLOAT     shift, and go to state 14
    PRINTPOINT     shift, and go to state 15
    PRINTSHAPE     shift, and go to state 16
    SCANINT        shift, and go to state 17
    SCANFLOAT      shift, and go to state 18
    CONSTROIPOINT  shift, and go to state 19
    CONSTROISHAPE  shift, and go to state 20
    PERIMETRO      shift, and go to state 21
    ISIN           shift, and go to state 22
    ISCOLLIDED     shift, and go to state 23
    LITERAL        shift, and go to state 50
    INTEIRO        shift, and go to state 51
    DECIMAL        shift, and go to state 52
    ID             shift, and go to state 24
    INI_PARAM      shift, and go to state 53
    ACESSO_END     shift, and go to state 33

    expressao     go to state 75
    var           go to state 63
    express_simp  go to state 64
    express_soma  go to state 65
    termo         go to state 66
    factor        go to state 67
    endereco      go to state 68
    chamada       go to state 69
    nome_func     go to state 70
    num           go to state 71


State 54

   29 instruc_expr: FIM_EXPRESS .

    $default  reduce using rule 29 (instruc_expr)


State 55

   24 instrucao: instruc_composta .

    $default  reduce using rule 24 (instrucao)


State 56

   18 instruc_composta: INI_INSTRUC decl_local lista_instruc . FIM_INSTRUC

    FIM_INSTRUC  shift, and go to state 76


State 57

   18 instruc_composta: . INI_INSTRUC decl_local lista_instruc FIM_INSTRUC
   21 lista_instruc: . %empty  [FIM_INSTRUC]
   22              | . instrucao lista_instruc
   22              | instrucao . lista_instruc
   23 instrucao: . instruc_expr
   24          | . instruc_composta
   25          | . instruc_cond
   26          | . instruc_iterac
   27          | . instruc_return
   28 instruc_expr: . expressao FIM_EXPRESS
   29             | . FIM_EXPRESS
   30 instruc_cond: . IF INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC
   31             | . IF INI_PARAM expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC ELSE INI_INSTRUC instrucao FIM_INSTRUC
   32 instruc_iterac: . FOR INI_PARAM expressao FIM_EXPRESS express_simp FIM_EXPRESS expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC
   33 instruc_return: . RETURN expressao FIM_EXPRESS
   34 expressao: . var atrop express_simp
   35          | . express_simp
   36 var: . ID
   37 express_simp: . express_soma
   38             | . express_soma relop express_soma
   39 express_soma: . termo
   40             | . termo addop express_soma
   41 termo: . factor
   42      | . factor mulop termo
   43 factor: . INI_PARAM expressao FIM_PARAM
   44       | . endereco
   45       | . var
   46       | . chamada
   47       | . num
   48       | . LITERAL
   49 endereco: . ACESSO_END var
   50 chamada: . nome_func INI_PARAM arg FIM_PARAM
   51 nome_func: . PRINTINT
   52          | . PRINTFLOAT
   53          | . PRINTPOINT
   54          | . PRINTSHAPE
   55          | . SCANINT
   56          | . SCANFLOAT
   57          | . CONSTROIPOINT
   58          | . CONSTROISHAPE
   59          | . PERIMETRO
   60          | . ISIN
   61          | . ISCOLLIDED
   62          | . var
   86 num: . INTEIRO
   87    | . DECIMAL

    IF             shift, and go to state 47
    FOR            shift, and go to state 48
    RETURN         shift, and go to state 49
    PRINTINT       shift, and go to state 13
    PRINTFLOAT     shift, and go to state 14
    PRINTPOINT     shift, and go to state 15
    PRINTSHAPE     shift, and go to state 16
    SCANINT        shift, and go to state 17
    SCANFLOAT      shift, and go to state 18
    CONSTROIPOINT  shift, and go to state 19
    CONSTROISHAPE  shift, and go to state 20
    PERIMETRO      shift, and go to state 21
    ISIN           shift, and go to state 22
    ISCOLLIDED     shift, and go to state 23
    LITERAL        shift, and go to state 50
    INTEIRO        shift, and go to state 51
    DECIMAL        shift, and go to state 52
    ID             shift, and go to state 24
    INI_PARAM      shift, and go to state 53
    INI_INSTRUC    shift, and go to state 39
    FIM_EXPRESS    shift, and go to state 54
    ACESSO_END     shift, and go to state 33

    $default  reduce using rule 21 (lista_instruc)

    instruc_composta  go to state 55
    lista_instruc     go to state 77
    instrucao         go to state 57
    instruc_expr      go to state 58
    instruc_cond      go to state 59
    instruc_iterac    go to state 60
    instruc_return    go to state 61
    expressao         go to state 62
    var               go to state 63
    express_simp      go to state 64
    express_soma      go to state 65
    termo             go to state 66
    factor            go to state 67
    endereco          go to state 68
    chamada           go to state 69
    nome_func         go to state 70
    num               go to state 71


State 58

   23 instrucao: instruc_expr .

    $default  reduce using rule 23 (instrucao)


State 59

   25 instrucao: instruc_cond .

    $default  reduce using rule 25 (instrucao)


State 60

   26 instrucao: instruc_iterac .

    $default  reduce using rule 26 (instrucao)


State 61

   27 instrucao: instruc_return .

    $default  reduce using rule 27 (instrucao)


State 62

   28 instruc_expr: expressao . FIM_EXPRESS

    FIM_EXPRESS  shift, and go to state 78


State 63

   34 expressao: var . atrop express_simp
   45 factor: var .  [LT, GT, LE, GE, EQ, NE, NOT, AND, OR, PLUS_OP, MINUS_OP, TIMES_OP, OVER_OP, FIM_PARAM, FIM_EXPRESS, SEPARA_ARG]
   62 nome_func: var .  [INI_PARAM]
   67 atrop: . ATR
   68      | . PLUS_ATR
   69      | . MINUS_ATR
   70      | . TIMES_ATR
   71      | . OVER_ATR

    ATR        shift, and go to state 79
    PLUS_ATR   shift, and go to state 80
    MINUS_ATR  shift, and go to state 81
    TIMES_ATR  shift, and go to state 82
    OVER_ATR   shift, and go to state 83

    INI_PARAM  reduce using rule 62 (nome_func)
    $default   reduce using rule 45 (factor)

    atrop  go to state 84


State 64

   35 expressao: express_simp .

    $default  reduce using rule 35 (expressao)


State 65

   37 express_simp: express_soma .  [FIM_PARAM, FIM_EXPRESS, SEPARA_ARG]
   38             | express_soma . relop express_soma
   72 relop: . LT
   73      | . GT
   74      | . LE
   75      | . GE
   76      | . EQ
   77      | . NE
   78      | . logop
   79 logop: . NOT
   80      | . AND
   81      | . OR

    LT   shift, and go to state 85
    GT   shift, and go to state 86
    LE   shift, and go to state 87
    GE   shift, and go to state 88
    EQ   shift, and go to state 89
    NE   shift, and go to state 90
    NOT  shift, and go to state 91
    AND  shift, and go to state 92
    OR   shift, and go to state 93

    $default  reduce using rule 37 (express_simp)

    relop  go to state 94
    logop  go to state 95


State 66

   39 express_soma: termo .  [LT, GT, LE, GE, EQ, NE, NOT, AND, OR, FIM_PARAM, FIM_EXPRESS, SEPARA_ARG]
   40             | termo . addop express_soma
   82 addop: . PLUS_OP
   83      | . MINUS_OP

    PLUS_OP   shift, and go to state 96
    MINUS_OP  shift, and go to state 97

    $default  reduce using rule 39 (express_soma)

    addop  go to state 98


State 67

   41 termo: factor .  [LT, GT, LE, GE, EQ, NE, NOT, AND, OR, PLUS_OP, MINUS_OP, FIM_PARAM, FIM_EXPRESS, SEPARA_ARG]
   42      | factor . mulop termo
   84 mulop: . TIMES_OP
   85      | . OVER_OP

    TIMES_OP  shift, and go to state 99
    OVER_OP   shift, and go to state 100

    $default  reduce using rule 41 (termo)

    mulop  go to state 101


State 68

   44 factor: endereco .

    $default  reduce using rule 44 (factor)


State 69

   46 factor: chamada .

    $default  reduce using rule 46 (factor)


State 70

   50 chamada: nome_func . INI_PARAM arg FIM_PARAM

    INI_PARAM  shift, and go to state 102


State 71

   47 factor: num .

    $default  reduce using rule 47 (factor)


State 72

   30 instruc_cond: IF INI_PARAM . expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC
   31             | IF INI_PARAM . expressao FIM_PARAM INI_INSTRUC instrucao FIM_INSTRUC ELSE INI_INSTRUC instrucao FIM_INSTRUC
   34 expressao: . var atrop express_simp
   35          | . express_simp
   36 var: . ID
   37 express_simp: . express_soma
   38             | . express_soma relop express_soma
   39 express_soma: . termo
   40             | . termo addop express_soma
   41 termo: . factor
   42      | . factor mulop termo
   43 factor: . INI_PARAM expressao FIM_PARAM
   44       | . endereco
   45       | . var
   46       | . chamada
   47       | . num
   48       | . LITERAL
   49 endereco: . ACESSO_END var
   50 chamada: . nome_func INI_PARAM arg FIM_PARAM
   51 nome_func: . PRINTINT
   52          | . PRINTFLOAT
   53          | . PRINTPOINT
   54          | . PRINTSHAPE
   55          | . SCANINT
   56          | . SCANFLOAT
   57          | . CONSTROIPOINT
   58          | . CONSTROISHAPE
   59          | . PERIMETRO
   60          | . ISIN
   61          | . ISCOLLIDED
   62          | . var
   86 num: . INTEIRO
   87    | . DECIMAL
